--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "svelte5kit-localization",
   "version": "0.0.1",
   "license": "MIT",
+  "author": {
+    "name": "Konstantin Tarmyshov",
+    "email": "k.tarmyshov@googlemail.com"
+  },
+  "homepage": "https://github.com/ktarmyshov/svelte5kit-localization",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run prepack",
