--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/ktarmyshov/svelte5kit-localization",
   "keywords": [
     "svelte",
+    "svelte5",
     "sveltekit",
     "localization",
     "internationalization",
