--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -14,7 +14,19 @@ jobs:
         id: metadata
         uses: dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7
         with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Build, bump version, push
+        run: |
+          npm ci
+          npm run build
+          npm patch version -m "Dependabot update"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --global user.name "dependabot[bot]"
+          git push
       - name: Enable auto-merge for Dependabot PRs
         # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: gh pr merge --auto --merge "$PR_URL"
