--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           npm ci
           npm run build
-          npm patch version -m "Dependabot update"
+          npm version patch -m "Dependabot update"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "dependabot[bot]"
           git push
