--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -21,7 +21,7 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Build, bump version, push
         run: |
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "dependabot[bot]"
           npm ci
           npm run build
