--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -15,11 +15,11 @@ jobs:
         uses: dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Build, bump version, push
+      # - name: Checkout code
+      #   uses: actions/checkout@v2
+      #   with:
+      #     github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Build
         run: |
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "dependabot[bot]"
