--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,5 +1,9 @@
 name: Dependabot auto-merge
-on: pull_request
+on:
+  pull_request:
+    types: [opened, reopened]
+    branches:
+      - master
 
 permissions:
   contents: write
@@ -9,6 +13,7 @@ jobs:
   dependabot:
     runs-on: ubuntu-latest
     # if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'owner/my_repo'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
       - name: Dependabot metadata
         id: metadata
@@ -25,8 +30,7 @@ jobs:
           git config --global user.name "dependabot[bot]"
           npm ci
           npm run build
-          # npm version patch -m "Dependabot update"
-          # git push
+          # npm run test
       - name: Enable auto-merge for Dependabot PRs
         # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: gh pr merge --auto --merge "$PR_URL"
