--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,13 @@ on:
   push:
     branches:
       - master
+
+permissions:
+  contents: write
+  pull-requests: write
+
 name: Release
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
