--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,10 @@ jobs:
           registry-url: "https://registry.npmjs.org"
         if: ${{ steps.release.outputs.release_created }}
       - run: |
-          echo "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "release-please"
           npm ci
-          npm build
+          npm run build
           # npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
