--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: |
           npm ci
+          npm run check
+          npm run lint
           echo "Should run: npm test"
