--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,15 +5,15 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: 'daily'
     ignore:
-      - dependency-name: "npm"
-        versions: ["<10.0.0", ">=11.0.0"]
+      - dependency-name: 'npm'
+        versions: ['<10.0.0', '>=11.0.0']
     groups:
       production-dependencies:
-        dependency-type: "production"
+        dependency-type: 'production'
       development-dependencies:
-        dependency-type: "development"
+        dependency-type: 'development'
