--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,5 @@ updates:
         dependency-type: 'production'
       development-dependencies:
         dependency-type: 'development'
+    commit-message:
+      prefix: 'fix: chore(deps)'
