fix: auto-test stub

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,10 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 jobs:
   test:
