--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,13 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-    types:
-      - opened
-      - reopened
-      - synchronize
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
