--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
         if: ${{ steps.release.outputs.release_created }}
       - run: |
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "release-please"
           npm ci
+          npm run format
+          git add .
+          git commit -m "chore: format files"
+          git push
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
