--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,6 @@ jobs:
       - run: |
           npm ci
           npm run check
+          npm run format
           npm run lint
           echo "Should run: npm test"
