--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,4 +18,4 @@ updates:
       development-dependencies:
         dependency-type: 'development'
     commit-message:
-      prefix: 'fix: chore(deps)'
+      prefix: 'fix: chore(dependabot):'
