--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -12,42 +12,44 @@ jobs:
   dependabot:
     runs-on: ubuntu-latest
     # if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'owner/my_repo'
-    if: github.event.pull_request.user.login == 'dependabot[bot]'
+    if: github.event.pull_request.actor.login == 'dependabot[bot]'
     steps:
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7
         with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
-      - name: Build
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Enable auto-merge for Dependabot PRs
+        # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: |
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global user.name "dependabot[bot]"
           npm ci
           npm run build
           # npm run test
-      - name: Auto-merge for Dependabot PRs
-        # if: contains(steps.metadata.outputs.dependency-names, 'my-dependency') && steps.metadata.outputs.update-type == 'version-update:semver-patch'
-        run: gh pr merge --auto --merge "$PR_URL"
+          gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
   release-pr:
     runs-on: ubuntu-latest
-    # if: github.event.pull_request.user.login == 'dependabot[bot]'
+    if: github.event.pull_request.actor.login == 'dependabot[bot]' || github.event.pull_request.actor.login == 'github-actions[bot]'
     steps:
-      - name: just print
-        run: |
-          echo "github.event.pull_request.user.login: ${{ github.event.pull_request.user.login }}"
-          echo ${{ github.event.pull_request.user.login }}
-          echo "$GITHUB_ACTOR@users.noreply.github.com"
-          echo echo The Title of your PR is ${{ github.event.pull_request.title }}
-      - name: Check startsWith
-        if: startsWith(github.event.pull_request.title, 'fix(dependabot):')
-        run: |
-          echo "startsWith is true"
+      - name: Check if this is dependabot commits only
+        id: check_dependabot
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const commits = ${{ toJSON(github.event.commits) }};
+            let result = false;
+            if commits.length > 10 {
+              return false;
+            }
+            for (const commit of commits) {
+              console.log(commit);
+            }
