add test script stub

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
           npm ci
           npm run check
           npm run lint
-          echo "Should run: npm test"
+          npm test
