--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,6 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: "**/package-lock.json"
       - run: npm ci
       - run: npm run lint
       - run: npm run check
@@ -37,7 +36,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+          cache: npm
       - run: npm ci
       - run: npm test
