--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "svelte": "^5.22.5"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.28.1",
     "@eslint/compat": "^1.2.7",
     "@eslint/js": "^9.21.0",
     "@sveltejs/adapter-auto": "^4.0.0",
