--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions: {}
 jobs:
   release:
     # prevents this action from running on forks
-    # if: github.repository == 'svelte5kit-localization'
+    if: github.repository == 'ktarmyshov/svelte5kit-localization'
     permissions:
       contents: write # to create release (changesets/action)
       id-token: write # OpenID Connect token needed for provenance
@@ -19,7 +19,6 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Running on ${{ github.repository }} with ref ${{ github.ref }}"
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
