--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "test": "echo 'No tests yet'"
+    "test": "echo 'No tests yet'",
+    "changeset:release": "changeset",
+    "changeset:version": "changeset version && git add --all",
+    "changeset:publish": "changeset publish"
   },
   "files": [
     "dist",
