--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [
     "svelte",
     "svelte5",
+    "svelte 5",
     "sveltekit",
     "localization",
     "internationalization",
@@ -77,7 +78,6 @@
     "vite": "^6.2.1"
   },
   "dependencies": {
-    "i": "^0.3.7",
     "intl-messageformat": "^10.7.15",
     "npm": "^10.9.2"
   }
