--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
+      - run: ${#${{ github.event.pull_request.title }}}
+      - run: ${#${{ secrets.BOT_APP_ID }}}
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v2.1
