--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -10,16 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
-      - run: ${#${{ github.event.pull_request.title }}}
-        shell: bash
-      - run: ${#${{ secrets.BOT_APP_ID }}}
-        shell: bash
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v2.1
         with:
-          app_id: ${{ secrets.BOT_APP_ID }}
-          private_key: ${{ secrets.BOT_PRIVATE_KEY }}
+          app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
+          private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
       - name: Dependabot metadata
         id: metadata
