--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -14,7 +14,7 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@v2.1
         with:
-          app_id: "1171794"
+          app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
           private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
       - name: Dependabot metadata
