--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: Generate token
         id: generate_token
-        uses: tibdex/github-app-token@v2.1
+        uses: tibdex/github-app-token@v2
         with:
           app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
           private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@d7267f607e9d3fb96fc2fbe83e0af444713e90b7
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
