--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -23,6 +23,27 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
+      - name: Checkout source branch code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
+          token: ${{ steps.generate_token.outputs.token }}
+
+      - name: Add changesets to PR
+        run: |
+          CHANGESET_FILE="./.changeset/$(uuidgen).md"
+          echo "---" >> $CHANGESET_FILE
+          echo "'svelte5kit-localization': patch" >> $CHANGESET_FILE
+          echo "---" >> $CHANGESET_FILE
+          echo "" >> $CHANGESET_FILE
+          echo "${{ github.event.pull_request.title }}" >> $CHANGESET_FILE
+          # git config --global user.name 'mergeprbot[bot]'
+          # git config --global user.email 'mergeprbot[bot]@users.noreply.github.com'
+          git commit -am "Add changeset for Dependabot PR" --author="mergeprbot[bot] <mergeprbot[bot]@users.noreply.github.com>"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+
       - name: Enable auto-merge for Dependabot PRs
         if: steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: gh pr merge --auto --merge "$PR_URL"
