--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -37,8 +37,8 @@ jobs:
           echo "---" >> $CHANGESET_FILE
           echo "" >> $CHANGESET_FILE
           echo "${{ github.event.pull_request.title }}" >> $CHANGESET_FILE
-          # git config --global user.name 'mergeprbot[bot]'
-          # git config --global user.email 'mergeprbot[bot]@users.noreply.github.com'
+          git config --global user.name 'mergeprbot[bot]'
+          git config --global user.email 'mergeprbot[bot]@users.noreply.github.com'
           git commit -am "Add changeset for Dependabot PR" --author="mergeprbot[bot] <mergeprbot[bot]@users.noreply.github.com>"
           git push
         env:
