--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - run: echo "${{ github.event.pull_request }}"
+      - run: ${{ github.event.pull_request }}
       - run: echo "${{ github.ref_name }}"
       - run: echo "$GITHUB_REF"
 
