--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -24,6 +24,8 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
       - run: echo "${{ github.ref_name }}"
+      - run: echo "${{ github.ref }}"
+      - run: echo "${{ github.head_ref }}"
       - run: echo "$GITHUB_REF"
       - run: echo "$GITHUB_HEAD_REF"
 
