--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -35,7 +35,7 @@ jobs:
           ref: ${{ github.head_ref }}
           token: ${{ steps.generate_token.outputs.token }}
 
-      - name: Add changesets to PR
+      - name: Add changeset to PR
         run: |
           CHANGESET_FILE="./.changeset/$(uuidgen).md"
           echo "Filename is: $CHANGESET_FILE"
@@ -46,7 +46,11 @@ jobs:
           echo "${{ github.event.pull_request.title }}" >> $CHANGESET_FILE
           git config --global user.name 'mergeprbot[bot]'
           git config --global user.email 'mergeprbot[bot]@users.noreply.github.com'
-          git commit -am "Add changeset for Dependabot PR" --author="mergeprbot[bot] <mergeprbot[bot]@users.noreply.github.com>"
+          ls -laht
+          ls -laht .changeset
+          ls -laht $CHANGESET_FILE
+          git add $CHANGESET_FILE
+          git commit -m "Add changeset for Dependabot PR" --author="mergeprbot[bot] <mergeprbot[bot]@users.noreply.github.com>"
           git push
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
