--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -59,6 +59,7 @@ jobs:
         if: |
           steps.metadata.outputs.update-type == 'version-update:semver-minor' || 
           steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
+          steps.check_changeset.outputs.committed == 'false'
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
