--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -57,8 +57,8 @@ jobs:
 
       - name: Enable auto-merge for Dependabot PRs
         if: |
-          steps.metadata.outputs.update-type == 'version-update:semver-minor' || 
-          steps.metadata.outputs.update-type == 'version-update:semver-patch' ||
+          (steps.metadata.outputs.update-type == 'version-update:semver-minor' || 
+          steps.metadata.outputs.update-type == 'version-update:semver-patch') &&
           steps.check_changeset.outputs.committed == 'false'
         run: gh pr merge --auto --merge "$PR_URL"
         env:
