--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,11 +12,11 @@ updates:
     ignore:
       - dependency-name: "npm"
         versions: ["<10.0.0", ">=11.0.0"]
-    groups:
-      production-dependencies:
-        dependency-type: "production"
-      development-dependencies:
-        dependency-type: "development"
+    # groups:
+    #   production-dependencies:
+    #     dependency-type: "production"
+    #   development-dependencies:
+    #     dependency-type: "development"
     commit-message:
       prefix: "dependabot(deps)"
       prefix-development: "dependabot(deps-dev)"
