--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "svelte5kit-localization",
+  "description": "Localization for SvelteKit with Svelte 5 reactivity",
   "version": "0.1.4",
   "license": "MIT",
   "author": {
