--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -13,7 +13,7 @@ jobs:
       - id: generate_token
         uses: tibdex/github-app-token@v2
         with:
-          app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
+          app_id: ${{ secrets.MERGEPRBOT_CLIENT_ID }}
           private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
       - id: metadata
