--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@v2
         with:
-          app_id: ${{ secrets.MERGEPRBOT_CLIENT_ID }}
+          app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
           private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
       - name: Checkout Repo
