--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -11,7 +12,7 @@ permissions: {}
 jobs:
   release:
     # prevents this action from running on forks
-    if: github.repository == 'ktarmyshov/svelte5kit-localization'
+    if: ${{ github.repository == 'ktarmyshov/svelte5kit-localization' && github.ref == 'refs/heads/master' && github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success' }}
     permissions:
       contents: write # to create release (changesets/action)
       id-token: write # OpenID Connect token needed for provenance
@@ -19,30 +20,26 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Generate token
-        id: generate_token
+      - id: generate_token
         uses: tibdex/github-app-token@v2
         with:
           app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
           private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
 
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
           token: ${{ steps.generate_token.outputs.token }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: npm
 
       - run: npm ci
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
+      - id: changesets
         uses: changesets/action@v1
         with:
           #   # This expects you to have a script called release which does a build for your packages and calls changeset publish
