--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "files": [
     "dist",
     "!dist/**/*.test.*",
-    "!dist/**/*.spec.*"
+    "!dist/**/*.spec.*",
+    "!tests"
   ],
   "sideEffects": [
     "**/*.css"
