--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -11,10 +11,10 @@ jobs:
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
       - id: generate_token
-        uses: tibdex/github-app-token@v2
+        uses: actions/create-github-app-token@v1
         with:
-          app_id: ${{ secrets.MERGEPRBOT_APP_ID }}
-          private_key: ${{ secrets.MERGEPRBOT_PRIVATE_KEY }}
+          app-id: ${{ secrets.WORKFLOW_APP_ID }}
+          private-key: ${{ secrets.WORKFLOW_APP_PRIVATE_KEY }}
 
       - id: metadata
         uses: dependabot/fetch-metadata@v2
@@ -26,6 +26,9 @@ jobs:
           ref: ${{ github.head_ref }}
           token: ${{ steps.generate_token.outputs.token }}
 
+      - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }}
+
+      # TODO: pack these two steps into a single action with output from dependabot/fetch-metadata: .outputs.updated-dependencies-json
       - id: get-package-info
         run: |
           PKG_NAME=$(jq -r '.name' package.json)
