--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
-    "test": "echo 'No tests yet'",
+    "test": "cypress run --browser chrome",
     "changeset:version": "changeset version && git add --all",
-    "changeset:publish": "changeset publish"
+    "changeset:publish": "changeset publish",
+    "cy:open": "cypress open"
   },
   "files": [
     "dist",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*",
-    "!tests"
+    "!cypress"
   ],
   "sideEffects": [
     "**/*.css"
@@ -65,8 +66,10 @@
     "@sveltejs/kit": "^2.19.0",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "cypress": "^14.2.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-cypress": "^4.2.0",
     "eslint-plugin-svelte": "^3.0.2",
     "globals": "^16.0.0",
     "prettier": "^3.5.2",
