--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
       - run: npm ci
-      - run: npm test
+      - run: npm run build
+      - uses: cypress-io/github-action@v6
+        with:
+          start: npm run preview
+          wait-on: http://localhost:5173
