--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "cypress": "^14.2.1",
+    "dompurify": "^3.2.4",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-cypress": "^4.2.0",
