--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
         with:
           start: npm run preview
           wait-on: http://localhost:5173
-  sonarqube:
+  sonarqube-workflow:
     uses: ./.github/workflows/codescan.yml
