--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,4 @@ jobs:
           wait-on: http://localhost:5173
   sonarqube-workflow:
     uses: ./.github/workflows/codescan.yml
+    secrets: inherit
