--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -1,7 +1,13 @@
 on:
   workflow_call:
-    secrets: inherit
-
+    # secrets:
+    #   SONAR_TOKEN:
+    #     required: true
+    #     description: "SonarQube token"
+    outputs:
+      sonarqube_url:
+        description: "SonarQube URL"
+        value: ${{ steps.sonarqube.outputs.sonarqube_url }}
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
