--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,1 +1,5 @@
+sonar.organization=ktarmyshov
+sonar.projectKey=svelte5kit-localization
+sonar.projectName=svelte5kit-localization
+
 sonar.exclusions=src/routes/**/*
