--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -3,6 +3,8 @@ on:
 
 jobs:
   sonarqube:
+    # Disabled at the moment
+    if: ${{ 'true' == 'false' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
