--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,22 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["CI"]
+  status:
     types:
-      - completed
+      - success
+  # workflow_run:
+  #   workflows: ["CI"]
+  #   types:
+  #     - completed
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions: {}
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{ tojson(github) }}
   release:
     # prevents this action from running on forks
     if: ${{ github.repository == 'ktarmyshov/svelte5kit-localization' && github.ref == 'refs/heads/master' && github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success' }}
