--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Release
 
 on:
-  status
+  check_suite:
+    types: [completed]
+    branches:
+      - master
   # workflow_run:
   #   workflows: ["CI"]
   #   types:
