--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
 name: Release
 
 on:
-  check_suite:
-    types: [completed]
-    branches:
-      - master
+  status
+  # check_suite:
+  #   types: [completed]
+  #   branches:
+  #     - master
   # workflow_run:
   #   workflows: ["CI"]
   #   types:
