--- a/.github/workflows/codescan.yml
+++ b/.github/workflows/codescan.yml
@@ -1,6 +1,9 @@
 on:
   workflow_call:
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   sonarqube:
     # Disabled at the moment
