--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
         with:
           start: npm run preview
           wait-on: http://localhost:5173
-  code-scan:
-    uses: ./.github/workflows/codescan.yml
+  # sonar:
+  #   uses: ./.github/workflows/sonar.yml
+  #   secrets: inherit
+  codeql:
+    uses: ./.github/workflows/codeql.yml
     secrets: inherit
