--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,11 @@ permissions:
   contents: read # to fetch code (actions/checkout)
 
 jobs:
-  echo:
-    runs-on: ubuntu-latest
-    steps:
-      - run: ${{ tojson(github) }}
-        shell: cat {0}
+  # echo:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: ${{ tojson(github) }}
+  #       shell: cat {0}
   check:
     runs-on: ubuntu-latest
     steps:
@@ -49,9 +49,9 @@ jobs:
         with:
           start: npm run preview
           wait-on: http://localhost:5173
-  # sonar:
-  #   uses: ./.github/workflows/sonar.yml
-  #   secrets: inherit
+  sonar:
+    uses: ./.github/workflows/sonar.yml
+    secrets: inherit
   codeql:
     uses: ./.github/workflows/codeql.yml
     secrets: inherit
