--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: "SonarQube Scan"
 
 on:
   workflow_call:
-  # push:XX
+  # push:
   #   branches: ["master"]
   # pull_request:
   #   branches: ["master"]
