--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -24,7 +24,14 @@ jobs:
           echo "user=${{ steps.app-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
           echo "email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
           echo "full=${{ steps.app-token.outputs.app-slug }}[bot] <${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>"  >> "$GITHUB_OUTPUT"
-      - run: echo "committer string is ${{ steps.committer.outputs.string }}"
+      - run: |
+          echo "committer user is ${{ steps.committer.outputs.user }}"
+          echo "committer email is ${{ steps.committer.outputs.email }}"
+          echo "committer string is ${{ steps.committer.outputs.full }}"
+      - run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+
       - id: metadata
         uses: dependabot/fetch-metadata@v2
         with:
