--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -36,7 +36,7 @@ jobs:
         uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ steps.app-token.outputs.token }}
-      - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }}
+      # - run: echo ${{ steps.metadata.outputs.updated-dependencies-json }}
 
       - uses: actions/checkout@v4
         with:
